--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             background-color: rgba(0, 0, 0, 0.5);
         }
     </style>
+    @media all  (max-width: 1231px) { }
 </head>
 <body>
 <div class="container">
